--- a/cost.html
+++ b/cost.html
@@ -32,8 +32,8 @@
     <h2>COST OF THE UMBRELLAS</h2>
     <table>
         <tr>
-            <th>NAME</th>
-            <th>PRICE</th>
+            <th><h3>NAME</h3></th>
+            <th><h3>PRICE</h3></th>
         </tr>
         <tr>
             <td>jet-black Umbrella</td>
